# django_markdown_converter

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
blockifiers/: base_blockifier.py  blockifier.py  blockifier_footnote.py  blockifier_hr.py  blockifier_image.py  blockifier_meta.py  blockifier_paragraph.py  blockifier_svg.py
blockifiers/tests/: test_base_blockifier.py
django_markdown_converter/: blockify.py  convert.py  revert.py
django_markdown_converter/blockifiers/: blockifier.py  blockifier_admonition.py  blockifier_code.py  blockifier_data.py  blockifier_definitionlist.py  blockifier_empty.py  blockifier_heading.py  blockifier_list.py  blockifier_table.py  new_blockifier.py  nu_blockifier.py
django_markdown_converter/blocks/: admonition.py  base.py  blockquote.py  code.py  definitionlist.py  empty.py  footnote.py  heading.py  hr.py  image.py  list.py  meta.py  paragraph.py  svg.py  table.py
django_markdown_converter/helpers/: helpers.py  parsers.py  processors.py  utility.py
django_markdown_converter/inlineifiers/: inline_parser.py  new_inline_parser.py
django_markdown_converter/patterns/: block.py  data.py  generic.py  lookups.py  newdata.py  patterns.md  procpats.py  reversion.md  simpleblock.py
helpers/: helpers.py
inlineifiers/: inline_data.py
notes/: algo.md  cases.md  class_design_part2.py  class_megatokenizer.py  class_ogtokenizer.py  class_tokenizer.py  code_formatting.md  commands.md  custom_dict_object_test.py  custom_dict_object_test_advancedscanner.py  custom_object_test.py  future blocks.md  generated_examples.md  generator_things.md  inline_parsing.md  just_test.py  lambdas.md  log.md  markdown_patterns.md  matchobject.md  new_block_parser.md  pattern.match object.md  patterns.md  quick_test.py  regex compiling.md  regex.md  regexnotes.md  test_attrs.py  test_chunkfinder.py  test_chunkfinder_tokenizer.py  test_class_design.py  test_code_formatters.py  test_converter.py  test_inline_parser.py  test_inline_parsing.py  test_list_conversion.py  test_metablock.py  test_new_converter.py  test_newline_replacement.py  test_pattern_creation.py  (+10 more)
notes/examples/: post.md  post_answer.md  post_output.json  post_output.md  post_output_nu.json  tables.md
notes/generators/: generate_base.py  generate_list.py  generate_md.py  generate_sentence.py  generate_text.py
proto/: demo.py  parser.py  person.py  tokenizer.py
proto/misc/: parser.py  token.py  tokenizing.py
src/django_markdown_converter/: blockify.py
tests/: test_base_blockifier.md  test_basic_usage.py  test_conversion.py  test_reversion.py
tests/blocks/: test_admonition_block.md  test_admonition_block.py  test_base_block.py  test_blockquote_block.py  test_code_block.py  test_definitionilist_block.py  test_empty_block.py  test_footnote_block.md  test_footnote_block.py  test_heading_block.py  test_hr_block.py  test_image_block.py  test_list_block.py  test_meta_block.md  test_meta_block.py  (+6 more)
(+81 files in other folders)
