[tool.poetry]
name = "django_markdown_converter"
version = "0.1.0"
description = "converter for django md"
authors = ["Lawen Thayalakrishnan <lawen.thaya94@gmail.com>"]
maintainers = ["Lawen Thayalakrishnan <lawen.thaya94@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "django_markdown_converter", from = "src"}]
exclude = ["notes/"]
homepage = "https://github.com/Thayalakrishnan/django_markdown_converter"
repository = "https://github.com/Thayalakrishnan/django_markdown_converter"
keywords = ["django", "converter", "markdown", "json"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]


[tool.poetry.dependencies]
python = "^3.9.0"
pygments = "^2.16.1"
faker = "^30.8.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "2.11.1"
flake8 = "3.8.4"
black = "20.8b1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
